// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Result demos > demo: Basic 1`] = `
"<div class="ant-result ant-result-success" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"></path>
    </svg></div>
  <div class="ant-result-title">Successfully Purchased Cloud Server ECS!</div>
  <div class="ant-result-subtitle">Order number: 2017182818828182881 Cloud server configuration takes 1-5 minutes, please wait.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Buy Again</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Error 1`] = `
"<div class="ant-result ant-result-error" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"></path>
    </svg></div>
  <div class="ant-result-title">Submission Failed</div>
  <div class="ant-result-subtitle">Please check and modify the following information before resubmitting.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Buy Again</span>
    </button></div>
  <div class="ant-result-content">
    <div class="desc">
      <p style="font-size: 16px;"><strong>The content you submitted has the following error:</strong></p>
      <p>Your account has been frozen.</p>
      <p>Your account is not yet eligible to apply.</p>
    </div>
  </div>
</div>"
`;

exports[`Result demos > demo: Info 1`] = `
"<div class="ant-result ant-result-info" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"></path>
    </svg></div>
  <div class="ant-result-title">Your operation has been executed</div>
  <!--v-if-->
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: NotFound 1`] = `
"<div class="ant-result ant-result-404" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="0 0 252 294" width="250" height="294">
      <!-- 404 Not Found illustration -->
      <g fill="none" fill-rule="evenodd">
        <!-- Page background -->
        <rect x="30" y="20" width="190" height="240" rx="8" fill="#F5F5F5" stroke="#D9D9D9" stroke-width="2"></rect><!-- Page fold -->
        <path d="M180 20v40h40" fill="#E6E6E6" stroke="#D9D9D9" stroke-width="2"></path><!-- Content lines -->
        <rect x="60" y="80" width="130" height="8" rx="4" fill="#E6E6E6"></rect>
        <rect x="60" y="100" width="100" height="8" rx="4" fill="#E6E6E6"></rect>
        <rect x="60" y="120" width="115" height="8" rx="4" fill="#E6E6E6"></rect><!-- Magnifying glass circle -->
        <circle cx="135" cy="185" r="35" stroke="#D9D9D9" stroke-width="4" fill="none"></circle><!-- Magnifying glass handle -->
        <line x1="160" y1="210" x2="185" y2="235" stroke="#D9D9D9" stroke-width="6" stroke-linecap="round"></line><!-- Question mark in magnifier --><text x="125" y="196" font-family="Arial, sans-serif" font-size="40" font-weight="bold" fill="#BFBFBF" text-anchor="middle">?</text><!-- Decorative dots -->
        <circle cx="45" cy="50" r="4" fill="#1677FF" opacity="0.3"></circle>
        <circle cx="210" cy="270" r="6" fill="#1677FF" opacity="0.2"></circle>
        <circle cx="25" cy="200" r="3" fill="#1677FF" opacity="0.25"></circle>
      </g>
    </svg></div>
  <div class="ant-result-title">404</div>
  <div class="ant-result-subtitle">Sorry, the page you visited does not exist.</div>
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Back Home</span>
    </button></div>
  <!--v-if-->
</div>"
`;

exports[`Result demos > demo: Warning 1`] = `
"<div class="ant-result ant-result-warning" role="status">
  <div class="ant-result-icon" aria-hidden="true"><svg viewBox="64 64 896 896" width="1em" height="1em" fill="currentColor">
      <path d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"></path>
    </svg></div>
  <div class="ant-result-title">There are some problems with your operation.</div>
  <!--v-if-->
  <div class="ant-result-extra"><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
      <!--v-if-->
      <!--v-if--><span class="ant-btn-content">Go Console</span>
    </button></div>
  <!--v-if-->
</div>"
`;
